# forge

./: .gitignore  Cargo.toml  README.md  forge-v0-build-spec.md
crates/forge-core/: Cargo.toml
crates/forge-core/src/: config.rs  discovery.rs  graph.rs  guardian.rs  judge.rs  lib.rs  linker.rs  logging.rs  recall.rs  record.rs  snapshot.rs
crates/forge-core/src/embed/: cache.rs  e5.rs  fake.rs  mod.rs
crates/forge-core/tests/: fixtures.rs  phase1_checkpoint.rs  phase2_checkpoint.rs  phase3_checkpoint.rs
crates/forge-inspect/: Cargo.toml
crates/forge-inspect/src/: main.rs
crates/forge-mcp/: Cargo.toml
crates/forge-mcp/src/: discover.rs  main.rs  scaffold.rs
crates/forge-mcp/tests/: acceptance.rs
docs/plans/: 2026-07-02-forge-mcp-empty-mode-design.md  2026-07-02-forge-mcp-empty-mode.md
docs/superpowers/plans/: 2026-07-02-forge-mcp-agent-setup.md  2026-07-02-forge-v0.md
docs/superpowers/specs/: 2026-07-02-forge-mcp-agent-setup-design.md  2026-07-02-forge-v0-design.md
fixtures/corpus/: ORACLE.md  forge.toml
fixtures/corpus/decisions/: d-dangling.md  d-deprecated.md  d-embed-onnx.md  d-keep-legacy.md  d-new-storage.md  d-old-storage.md  d-small-model.md  d-use-rust.md
fixtures/corpus/forces/: f-cycle-a.md  f-cycle-b.md  f-dup-1.md  f-dup-2.md  f-local-first.md  f-model-small.md  f-new-way.md  f-onnx-portable.md  f-retired-old.md  f-rust-stable.md  malformed.md
