[workspace]
resolver = "2"
members = ["crates/forge-core", "crates/forge-inspect", "crates/forge-mcp"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
toml = "0.8"
walkdir = "2"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
sha2 = "0.10"
thiserror = "2"
