[package]
name = "forge-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde.workspace = true
serde_yaml.workspace = true
serde_json.workspace = true
toml.workspace = true
walkdir.workspace = true
chrono.workspace = true
sha2.workspace = true
thiserror.workspace = true

[features]
default = []
onnx = []
