[package]
name = "forge-mcp"
version = "0.1.0"
edition = "2021"

[dependencies]
forge-core = { path = "../forge-core", features = ["onnx"] }
rmcp = { version = "2.0", features = ["server", "transport-io", "macros"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
serde_json = "1"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
schemars = "1"
tracing.workspace = true
tracing-subscriber.workspace = true
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
